# master_thesis

./: .gitignore  Makefile
docs/: Makefile
docs/source/: conf.py  get_classes.py  get_scripts.py  index.rst
docs/source/rst/: MasterModule.rst  installation.rst  introduction.rst  modules.rst  scripts.rst
docs/source/rst/scripts/: beam_height.rst  beam_height_diff.rst  cartesian_plot.rst  difference_plot.rst  get_sun.rst  radar_plot.rst
docs/source/rst/stubs/: MasterModule.cartesian_coordinates.rst  MasterModule.cartesian_grid.rst  MasterModule.dwd_radar.rst  MasterModule.grid_coordinates.rst  MasterModule.grid_corners.rst  MasterModule.grid_plot.rst  MasterModule.heights_plot.rst  MasterModule.main_radar.rst  (+6 more)
python/: .gitignore  beam_height.py  beam_height_diff.py  cartesian_plot.py  difference_plot.py  functions.py  get_sun.py  parameters.py  plot_dwd.py  plot_pattern.py  radar_plot.py
python/ModuleSetup/: .setup.py.swp  setup.cfg  setup.py
python/ModuleSetup/MasterModule/: CartesianGrid.py  DWDRadar.py  GridParameter.py  MainRadar.py  PatternRadar.py  RadarData.py  cartesian_coordinates.py  cartesian_grid.py  dwd_radar.py  grid_coordinates.py  grid_corners.py  grid_parameter.py  grid_plot.py  heights_plot.py  main_radar.py  middle_coordinates.py  pattern_radar.py  pattern_radar_v2.py  radar_data.py  refl_diff_plot.py  refl_plot.py
python/programs/: beam_height.py  cartesian_plot.py  difference_plot.py  functions.py
python/scripts/: beam_height.py  beam_height_diff.py  cartesian_plot.py  difference_plot.py  functions.py  get_sun.py  radar_plot.py
