[metadata]
name = MasterModule
version = 0.1.0
description = Module for python programs of master thesis
long_description = file: README.md
keywords = radar, master_thesis
license = GPLv3
author = Gregor Möller
author_email = gregor_moeller@live.de
url = https://github.com/GroovyGregor/master_thesis
classifiers = 
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Programming Language :: Python :: 3.5
	Operating System :: OS Independent
	Topic :: Scientific / Engineering
	Topic :: Scientific/Engineering :: Atmospheric Science
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Utilities

[options]
packages = find:
install_requires = 
	numpy
	h5py
	wradlib
	cartopy
	netCDF4

[options.packages.find]

[easy_install]
